# remote-merge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  spec.md
.claude/: review-rules.md  settings.json
.claude/commands/: release.md
.claude/hooks/: pre-commit-format.sh
.github/workflows/: ci.yml  release.yml
docs/: status.md
docs/cycles/: 20260309211045_symlink-merge-logic-to-service-layer.md  20260310114351_cli-quality-improvements.md  20260310120132_tui-bugfix-enter-and-ref-badge.md  20260310135716_e2e-test-enrichment.md  20260310233345_fix-ssh-large-file-write.md  20260311004829_merge-scan-agent-integration.md  20260311212707_test-coverage-improvement.md  20260311225740_performance-tuning.md  20260313002514_fix-scan-agent-reliability.md  20260314133920_fix-badge-color-light-theme.md  20260314171406_async-badge-scan-on-expand.md  20260314175606_fix-binary-hash-color-light-theme.md  20260314202016_badge-scan-limit-ux.md  20260314222758_fix-diff-mode-root-path-leak.md  20260316130833_tui-include-filter.md  20260319230733_agent-performance-optimization.md
docs/plans/: 20260401_codebase-review-improvements.md  20260406123146_cli-hunk-merge.md  (+1 more)
scripts/: coverage.sh  install.ps1  install.sh  pre-commit  pre-push  setup-hooks.sh
skills/: remote-merge.skill
src/: app.rs  config.rs  error.rs  filter.rs  format.rs  init.rs  lib.rs  main.rs  state.rs  tree.rs
src/agent/: mod.rs  (+10 more)
testenv/: CentOS-Base.repo  Dockerfile  config.toml  docker-compose.yml  generate_local_data.sh  generate_testdata.sh  setup.sh  sshd_config
tests/: agent_process.rs  agent_ssh_deploy.rs  cli_diff.rs  cli_error_handling.rs  cli_exit_code.rs  cli_exit_codes.rs  cli_init.rs  cli_logs_events.rs  cli_merge.rs  cli_rollback.rs  cli_rollback_local.rs  cli_status.rs  ssh_integration.rs  tui_3way.rs  tui_diff_view.rs  tui_e2e.rs  tui_integration.rs  tui_merge.rs  tui_navigation.rs  tui_search.rs  tui_server_switch.rs  tui_startup.rs
(+152 files in other folders)
